# lumpy-sv

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  README.md  README.rst  defs.local  old_README.rst
batchx/lumpyexpress/: .gitignore  Dockerfile  lumpyexpress  lumpyexpress.py  lumpyexpress.sh
claude-bedtools/: README.md
data/: example.cns  pe.pos_sorted.histo  pe.pos_sorted.pe.bedpe  pe.pos_sorted.pesr.bedpe  sim.bedpe  sr.pos_sorted.bam  sr.pos_sorted.sr.bedpe
hifi-qc/: .gitignore  Cargo.toml  README.md  pyproject.toml
hifi-qc/docs/plans/: 2026-02-21-hifi-qc-design.md  2026-02-21-hifi-qc-implementation.md
hifi-qc/python/hifi_qc/: __init__.py  cli.py  report.py
hifi-qc/python/hifi_qc/templates/: report.html.j2
hifi-qc/src/: bam_reader.rs  coverage.rs  gc_bias.rs  lib.rs  metrics.rs
hifi-qc/tests/: create_test_bam.py  test_e2e.py
hifi-qc/tests/data/: test.bam  test.bam.bai  test_ref.fa  test_ref.fa.fai
hifi-qc/tests/data/output/: basic_report.html  named_report.html  ref_report.html  sampled_report.html
lumpy_tests/: test.sh
scripts/: bedpe_sort.py  check_sorting.py  cnvanator_to_bedpes.py  extract-sites.py  extractSplitReads_BwaMem  get_coverages.py  get_exclude_regions.py  l_bp.py  l_merge.py  l_sort.py  lmerge.py  lsort.py  lumpy_smooth  lumpyexpress  lumpyexpress.config  pairend_distro.pl  pairend_distro.py  par-svtyper.sh  prob_bedpe_to_bedgraph.py  run_histo.sh  split_unmapped_to_fasta.pl  vcfToBedpe
src/filter/: Makefile  (+1 more)
test/: bp_pe.sh  bp_pe_pl.sh  bp_pesr.sh  bp_pesr_pl.sh  bp_sr.sh  functional-test.sh  test.sh  test_pl.sh
(+91 files in other folders)
